@@ -1,3 +1,7 @@
+2011-11-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_mutex.c, src/pj_apply_vgridshift.c: avoid unused warnings.
+
 2011-11-13  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/nad2bin.c: Modified to write NTv2 format files.
